# koda

./: .gitignore  LINKEDIN_PROJECT_ENTRY.md  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/cli/: commands.py
backend/src/: main.py
backend/src/agent/: change_manager.py  orchestrator.py  state.py  tool_executor.py
backend/src/api/: __init__.py  auth.py  repos.py  routes.py  server.py  streaming.py  tasks.py
backend/src/cli/: commands.py  diff_display.py  theme.py
backend/src/db/: __init__.py  database.py  models.py  schemas.py  token_tracker.py
backend/src/indexer/: extractor.py  index.py  parser.py
backend/src/llm/: __init__.py  client.py
backend/src/llm/providers/: __init__.py  anthropic.py  base.py  openai.py
backend/src/tools/: file_ops.py  indexer_tools.py  registry.py  terminal.py
backend/src/utils/: __init__.py  encryption.py  github_client.py  repo_cache.py  repo_manager.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ProtectedRoute.tsx  PublicOnlyRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAgentWebSocket.ts  useApiError.ts  useKeyboardShortcuts.ts  useRepoSelection.ts  useToast.ts
frontend/src/pages/: ApiKeySetupPage.tsx  AuthCallbackPage.tsx  AuthPage.tsx  DashboardPage.tsx  EmailAuthPage.tsx  LandingPage.tsx  SettingsPage.tsx
frontend/src/stores/: agentStore.ts  themeStore.ts
frontend/src/types/: agent.ts  changes.ts
(+24 files in other folders)
